# meta-team-oswin

./: .env.example  .gitignore  Dockerfile  README.md  client.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_all_tasks.sh  validate_submission.sh
data/: task_1_sampled.csv  task_2_sampled.csv  task_3_sampled.csv  task_4_sampled.csv  task_5_sampled.csv
scripts/: fetch_datasets.py
server/: __init__.py  app.py  environment.py  models.py  preprocessing.py
tasks/: grader.py
tasks/task_1/: grader.py
tasks/task_3/: grader.py
